[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopmspe11"
description = "A framework using OPM Flow for the SPE11 benchmark project"
authors = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" },
{ name = "Tor Harald Sandve", email = "tosa@norceresearch.no" }]
maintainers = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" },
{ name = "Tor Harald Sandve", email = "tosa@norceresearch.no" }]
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["csp11", "ccs", "cfd", "co2", "flow", "opm", "python", "spe11"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    "mako",
    "matplotlib",
    "pandas",
    "Pyarrow",
    "resdata",
    "rtree",
    "scipy",
    "shapely",
]
requires-python = ">=3.8"

[tool.setuptools.dynamic]
version = {attr = "pyopmspe11.__version__"}

[project.scripts]
pyopmspe11 = "pyopmspe11.core.pyopmspe11:main"

[project.urls]
Homepage = "https://cssr-tools.github.io/pyopmspe11"
Repository = "https://github.com/cssr-tools/pyopmspe11"

[tool.setuptools]
packages.find.where = ["src"]
platforms = ["all"]

[project.optional-dependencies]
opm = ["opm"]